[project]
name = "stegimage"
version = "0.0.1"
authors = [
  { name="Arul H", email="arulh@metrized.com" },
]
dependencies=[
  "pillow",
  "numpy",
  "pandas"
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]