[project]
name = "stegimage"
description = "Steganography for images"
authors = [{ name = "Arul Howard", email = "arulh@metrized.com" }]
requires-python = ">=3.7"
dynamic = ["version", "readme"]
dependencies = ["pillow", "numpy", "pandas"]

[project.optional-dependencies]
dev = ["pip-tools", "pytest"] # Developer tools

[tool.setuptools.dynamic]
version = { attr = "stegimage.__version__" }
readme = { file = ["README.md"] }

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
